--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
+    "@types/axios": "^0.14.4",
     "@types/luxon": "^3.4.2",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
